# HMI-MAS-CASE

./: README.md  app.py  run_crew.py  test_connection.py
Inventory-Multi-Agent/: README.md  pyproject.toml  test_connection.py
Inventory-Multi-Agent/frontend/: index.html
Inventory-Multi-Agent/frontend/css/: styles.css
Inventory-Multi-Agent/frontend/js/: agent-workflow.js
Inventory-Multi-Agent/src/supplier_analysis/: email_summary.txt  supplier_analysis.py  suppliers.csv  valve_history.csv
frontend/: demand_initiation.html  index.html  landing.html
frontend/css/: styles.css
frontend/js/: agent-workflow.js
src/supplier_analysis/: email_summary.txt  supplier_analysis.py  suppliers.csv  suppliers_limited.csv  valve_history.csv
templates/: demand_initiation.html
