[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "supplier-analysis"
version = "0.1.0"
description = "Supplier analysis using CrewAI"
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai>=0.14.0",
    "pandas",
    "duckduckgo-search",
    "openai",
    "httpx",
    "python-certifi-win32",
    "tomli>=2.0.1",
    "flask>=2.0.0"
]

[project.scripts]
run_crew = "supplier_analysis.supplier_analysis:run_analysis"
run_server = "app:app.run"

[tool.hatch.build.targets.wheel]
packages = ["src/supplier_analysis"]

[tool.crewai]
entry_point = "run_crew:main"
agents = [
    { role = "Supplier Database Analyst", goal = "Analyze supplier database to identify unavailable suppliers" },
    { role = "Supplier Research Specialist", goal = "Find alternative suppliers for unavailable ones" },
    { role = "Quality Assurance Analyst", goal = "Ensure quality and reliability of alternative suppliers" }
]

[tool.crewai.llm]
provider = "openai"
model = "gpt-4"
temperature = 0.7

[tool.crewai.tools]
enabled = ["web-search", "file-read"]

[tool.email]
server = "smtp.gmail.com"
port = 587
user = "hmi.agentic.ai.case@gmail.com" 